객체지향의 사실과 오해: 5장 스타일 수정

--- a/객체지향의 사실과 오해/5장_책임과 메시지.md
+++ b/객체지향의 사실과 오해/5장_책임과 메시지.md
@@ -58,6 +58,7 @@
   2. 인터페이스 자체는 변경하지 않고 단순히 내부 구성이나 작동 방식만을 변경하는 것은 인터페이스 사용자에게 아무런 영향도 주지 않는다.
   3. 대상이 변경되더라도 동일한 인터페이스를 제공하기만 하면 아무런 문제 없이 상호작용할 수 있다.
 
+  &nbsp;
   > 예시 - 자동차
   >
   > → 인터페이스: 핸들, 기어, 엑셀, 브레이크 등 
@@ -67,7 +68,8 @@
   > 특징2 : 엔진 동작 방식을 바꾸더라도 인터페이스만 바꾸지 않으면 운전자는 문제 없이 운전할 수 있다.
   >
   > 특징3 : 소나타를 운전할 줄 알면 포르쉐도 운전할 수 있다. 
-
+  
+  &nbsp;
 - 객체 역시 동일하다. 객체의 인터페이스만 알면 객체의 내부 구조나 동작 방식을 몰라도 객체와 상호작용할 수 있다.
 
 - 객체와 객체가 소통하기 위해서 필요한 것은? 오직 **메시지** 뿐이다. 따라서 객체의 인터페이스는 객체가 수신할 수 있는 메시지 목록으로 구성돼 있다. 
